<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="app_name">BlockchainSearch</string>
    <string name="activity_main_title">Blockchain Explorer</string>
    <string name="activity_address_title">Address</string>
    <string name="activity_wallet_title">Wallet</string>
    <string name="activity_transaction_title">Transaction</string>
    <string name="activity_preferences_title">Preferences</string>
    
    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_transaction_view">View transaction</string>
    <string name="action_copy">Copy to clipboard</string>
    
    <!-- Text -->
    <string name="text_refreshing">Refreshing...</string>
    <string name="text_empty_name">Please enter a valid name</string>
    <string name="text_name_exists">An item already exists with this name</string>
    <string name="text_address_saved">Address saved</string>
    <string name="text_address_unsaved">Address removed</string>
    <string name="text_address_unsave">Do you want to unsave this address?</string>
    <string name="text_address_save">Enter a name for this address</string>
    <string name="text_wallet_save">Enter a name for this wallet</string>
    <string name="text_wallet_saved">Wallet saved</string>
    <string name="text_wallet_add">Choose a wallet to add this address to</string>
    <string name="text_wallet_added">Address added to wallet</string>
    <string name="text_wallet_edit">Edit wallet</string>
    <string name="text_exception">An error has occurred: %s</string>
    <string name="text_invalid_input">Please enter a valid address or tx hash</string>
    <string name="text_search_hint">Enter address...</string>
    <string name="text_copied">Copied to clipboard</string>
    <string name="text_no_qrcode">Unable to scan QR code</string>
    <string name="text_load_more">Load more</string>
    <string name="text_loading">Loading...</string>

    <!-- Nav drawer -->
    <string-array name="drawer_list_titles">
        <item>Search</item>
        <item>Saved Addresses</item>
        <item>Wallets</item>
    </string-array>
    <string-array name="drawer_list_values">
        <item>.MainActivity</item>
        <item>saved_addresses</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    
    <!-- Preferences -->
    <string name="pref_title">Preferences</string>
    <string name="pref_theme_key">theme</string>
    <string name="pref_theme_title">App Theme</string>
    <string name="pref_theme_summary">Choose how the app looks (requires restart)</string>
    <string name="pref_theme_default">0</string>
    <string-array name="pref_theme_entries">
        <item>Dark</item>
       <item>Light</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_btc_format_key">btc_format</string>
    <string name="pref_btc_format_title">Bitcoin Format</string>
    <string name="pref_btc_format_summary">Denomination to use when displaying bitcoin amounts</string>
    <string name="pref_btc_format_default">0</string>
    <string-array name="pref_btc_format_entries">
        <item>Bitcoin</item>
        <item>Millibitcoin</item>
        <item>Microbitcoin</item>
        <item>Satoshi</item>
    </string-array>
    <string-array name="pref_btc_format_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_currency_key">currency</string>
    <string name="pref_currency_title">Currency</string>
    <string name="pref_currency_summary">Currency to use when converting bitcoin values</string>
    <string name="pref_currency_default">None</string>
    <string-array name="pref_currency_entries">
        <item>None</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>DKK</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>NZD</item>
        <item>PLN</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SLL</item>
        <item>THB</item>
        <item>USD</item>
    </string-array>
    <string name="pref_watch_type_key">watch_type</string>
    <string name="pref_watch_type_title">Addresses to watch</string>
    <string name="pref_watch_type_summary">Choose which addresses to monitor</string>
    <string name="pref_watch_type_default">3</string>
    <string-array name="pref_watch_type_entries">
        <item>Saved addresses</item>
        <item>Wallet addresses</item>
        <item>Both</item>
    </string-array>
    <string-array name="pref_watch_type_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="pref_watch_wakelock_key">watch_wakelock</string>
    <string name="pref_watch_wakelock_title">Acquire wakelock when watching addresses</string>
    <string name="pref_watch_wakelock_default">false</string>
    <string name="pref_watch_wakelock_summary">May fix notifications when the device has been asleep for a while. Warning: uses battery</string>
    <string name="pref_watch_addresses_key">watch_addresses</string>
    <string name="pref_watch_addresses_title">Watch saved addresses</string>
    <string name="pref_watch_addresses_default">false</string>
    <string name="pref_watch_addresses_summary">This will monitor your saved addresses in real time and send you notifications when they send or receive payments</string>
    <string name="pref_donate_address">18Zbf9aEKwZTeR92u4tuhQenoen9prSeNp</string>
    <string name="pref_confirmations_key">confirmations</string>
    <string name="pref_confirmations_title">Confirmations</string>
    <string name="pref_confirmations_default">3</string>
    <string name="pref_confirmations_summary">The number of confirmations a transaction needs to be considered successful (this changes the behaviour of the confirmation counter circle in the transactions list)</string>
    <string name="pref_notification_key">notification</string>
    <string name="pref_notification_title">Play sound for notifications</string>
    <string name="pref_notification_default">false</string>
    <string name="pref_notification_summary">Enable sound/vibration/lights for new notifications</string>
    
    <string name="admob_id">ca-app-pub-9822609068892864/7717430702</string>
    
    <!-- Rate prompting -->
    <string name="rate_launches_until_prompt">0</string>
    <string name="rate_prompt_text">If you enjoy using this app, please give it a rating!</string>
    <string name="rate_dismiss_text">No thanks</string>
    <string name="rate_remind_text">Remind me later</string>
    <string name="rate_confirm_text">Rate now!</string>
    
</resources>
