<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
        android:title="@string/pref_title">
        
        <ListPreference 
            android:key="@string/pref_btc_format_key"
            android:title="@string/pref_btc_format_title"
            android:summary="@string/pref_btc_format_summary"
            android:defaultValue="@string/pref_btc_format_default" 
            android:entries="@array/pref_btc_format_entries"
            android:entryValues="@array/pref_btc_format_values" />

        <EditTextPreference 
		    android:key="@string/pref_confirmations_key"
		    android:title="@string/pref_confirmations_title"
		    android:defaultValue="@string/pref_confirmations_default"
		    android:summary="@string/pref_confirmations_summary"
		    android:inputType="number" />
        
        <ListPreference 
            android:key="@string/pref_currency_key"
            android:title="@string/pref_currency_title"
            android:summary="@string/pref_currency_summary"
            android:defaultValue="@string/pref_currency_default" 
            android:entries="@array/pref_currency_entries"
            android:entryValues="@array/pref_currency_values" />
        
        <CheckBoxPreference
	        android:key="@string/pref_notification_key"
	        android:title="@string/pref_notification_title"
	        android:summary="@string/pref_notification_title"
	        android:defaultValue="@string/pref_notification_default" />
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="Beta">
        
        <CheckBoxPreference
	        android:key="@string/pref_watch_addresses_key"
	        android:title="@string/pref_watch_addresses_title"
	        android:summary="@string/pref_watch_addresses_summary"
	        android:defaultValue="@string/pref_watch_addresses_default" />
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="Donate">
        
        <PreferenceScreen
	        android:key="donate"
	        android:title="Donate"
	        android:summary="If you find this app useful, please consider clicking here and donating a small amount to this address to help with the future development of this open source app. If donations outweigh advertising revenue, adverts will be completely removed from the app!">
	        <intent
	             android:action="android.intent.action.VIEW"
	             android:targetPackage="com.jackpf.blockchainsearch"
	             android:targetClass="com.jackpf.blockchainsearch.AddressActivity">     
	             <extra android:name="search" android:value="@string/pref_donate_address" />
	        </intent>
	    </PreferenceScreen>
        
    </PreferenceCategory>

</PreferenceScreen>