<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/action_save" />
    
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_copy" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

</menu>
